--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/QMUI.NoActionBar">
-        <activity android:name=".mvp.ui.activity.SettingActivity" >
+        <activity android:name=".mvp.ui.activity.EditMyInformationActivity" />
+        <activity android:name=".mvp.ui.activity.SettingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,9 +32,7 @@
         </activity>
         <activity android:name=".mvp.ui.activity.ResetPassWordActivity" />
         <activity android:name=".mvp.ui.activity.RegisterActivity" />
-        <activity android:name=".mvp.ui.activity.LoginActivity">
-
-        </activity>
+        <activity android:name=".mvp.ui.activity.LoginActivity"></activity>
         <activity android:name=".mvp.ui.activity.MainActivity" />
     </application>
 
