--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,18 +22,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/QMUI.NoActionBar">
+        <activity android:name=".mvp.ui.activity.ReportActivity" />
         <activity android:name=".mvp.ui.activity.FriendDetailActivity" />
         <activity android:name=".mvp.ui.activity.AddFriendActivity" />
         <activity android:name=".mvp.ui.activity.MyFriendActivity" />
         <activity android:name=".mvp.ui.activity.EditPhoneActivity" />
         <activity android:name=".mvp.ui.activity.EditMyInformationActivity" />
-        <activity android:name=".mvp.ui.activity.SettingActivity">
-
-        </activity>
+        <activity android:name=".mvp.ui.activity.SettingActivity"></activity>
         <activity android:name=".mvp.ui.activity.ResetPassWordActivity" />
         <activity android:name=".mvp.ui.activity.RegisterActivity" />
         <activity android:name=".mvp.ui.activity.LoginActivity" />
-        <activity android:name=".mvp.ui.activity.MainActivity" >
+        <activity android:name=".mvp.ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
