--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,17 +28,18 @@
         <activity android:name=".mvp.ui.activity.EditPhoneActivity" />
         <activity android:name=".mvp.ui.activity.EditMyInformationActivity" />
         <activity android:name=".mvp.ui.activity.SettingActivity" />
-        <activity android:name=".mvp.ui.activity.ResetPassWordActivity" >
+        <activity android:name=".mvp.ui.activity.ResetPassWordActivity" />
+        <activity android:name=".mvp.ui.activity.RegisterActivity" />
+        <activity android:name=".mvp.ui.activity.LoginActivity" />
+        <activity
+            android:name=".mvp.ui.activity.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".mvp.ui.activity.RegisterActivity"></activity>
-        <activity android:name=".mvp.ui.activity.LoginActivity">
-        </activity>
-        <activity android:name=".mvp.ui.activity.MainActivity"></activity>
         <meta-data
             android:name="com.example.szh.network.GlobalConfiguration"
             android:value="ConfigModule" />
