--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
 
     implementation 'com.zhihu.android:matisse:0.5.3-beta3'
+
+    implementation 'com.contrarywind:Android-PickerView:4.1.9'
 }
