--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/QMUI.NoActionBar">
+        <activity android:name=".mvp.ui.activity.ArticleDetailActivity" />
         <activity android:name=".mvp.ui.activity.WalletRecordActivity" />
         <activity android:name=".mvp.ui.activity.AddRmbActivity" />
         <activity android:name=".mvp.ui.activity.ReleaseActivity" />
-        <activity android:name=".mvp.ui.activity.PushTieActivity" >
-
-        </activity>
+        <activity android:name=".mvp.ui.activity.PushTieActivity"></activity>
         <activity android:name=".mvp.ui.activity.ReportActivity" />
         <activity android:name=".mvp.ui.activity.FriendDetailActivity" />
         <activity android:name=".mvp.ui.activity.AddFriendActivity" />
@@ -35,9 +34,7 @@
         <activity android:name=".mvp.ui.activity.SettingActivity" />
         <activity android:name=".mvp.ui.activity.ResetPassWordActivity" />
         <activity android:name=".mvp.ui.activity.RegisterActivity" />
-        <activity android:name=".mvp.ui.activity.LoginActivity" >
-
-        </activity>
+        <activity android:name=".mvp.ui.activity.LoginActivity"></activity>
         <activity
             android:name=".mvp.ui.activity.MainActivity"
             android:launchMode="singleTask">
@@ -54,12 +51,12 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.szh.photo"
             android:exported="false"
-            android:grantUriPermissions="true"
-            android:authorities="com.example.szh.photo">
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/photo_path"/>
+                android:resource="@xml/photo_path" />
         </provider>
     </application>
 
