--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,6 @@ dependencies {
     implementation 'com.zhihu.android:matisse:0.5.3-beta3'
 
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
+
+    implementation 'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
 }
