--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/QMUI.NoActionBar">
+        <activity android:name=".mvp.ui.activity.MyYuCeActivity" />
         <activity android:name=".mvp.ui.activity.MyArticleActivity" />
         <activity android:name=".mvp.ui.activity.MyFansAndLookActivity" />
         <activity android:name=".mvp.ui.activity.MyCommentActivity" />
@@ -33,7 +34,7 @@
             android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity android:name=".mvp.ui.activity.WalletRecordActivity" />
         <activity android:name=".mvp.ui.activity.AddRmbActivity" />
-        <activity android:name=".mvp.ui.activity.ReleaseActivity"></activity>
+        <activity android:name=".mvp.ui.activity.ReleaseActivity" />
         <activity android:name=".mvp.ui.activity.PushTieActivity" />
         <activity android:name=".mvp.ui.activity.ReportActivity" />
         <activity android:name=".mvp.ui.activity.FriendDetailActivity" />
