--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,8 @@
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:exported="true"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:theme="@style/QMUI.NoActionBar" />
         <activity
             android:name="com.diwaves.news.mvp.ui.activity.MainActivity"
             android:launchMode="singleTask">
@@ -62,12 +63,12 @@
         </activity>
         <activity
             android:name=".wxapi.WXEntryActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:exported="true"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:taskAffinity="com.diwaves.news"
-            android:launchMode="singleTask">
-        </activity>
+            android:theme="@style/QMUI.NoActionBar"></activity>
+
         <meta-data
             android:name="com.diwaves.news.network.GlobalConfiguration"
             android:value="ConfigModule" />
