--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:name="com.jess.arms.base.BaseApplication"
@@ -20,40 +21,42 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/QMUI.NoActionBar">
-        <activity android:name="com.diwaves.news.mvp.ui.activity.TypeListActivityActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.MyYuCeActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.MyArticleActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.MyFansAndLookActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.MyCommentActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.MyCollectActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.MyLookActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.RmbMaketMainActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.SearchActivityActivity" />
+        <activity android:name=".mvp.ui.activity.PingBiActivityActivity" />
+        <activity android:name=".PingBiActivity" />
+        <activity android:name=".mvp.ui.activity.TypeListActivityActivity" />
+        <activity android:name=".mvp.ui.activity.MyYuCeActivity" />
+        <activity android:name=".mvp.ui.activity.MyArticleActivity" />
+        <activity android:name=".mvp.ui.activity.MyFansAndLookActivity" />
+        <activity android:name=".mvp.ui.activity.MyCommentActivity" />
+        <activity android:name=".mvp.ui.activity.MyCollectActivity" />
+        <activity android:name=".mvp.ui.activity.MyLookActivity" />
+        <activity android:name=".mvp.ui.activity.RmbMaketMainActivity" />
+        <activity android:name=".mvp.ui.activity.SearchActivityActivity" />
         <activity
-            android:name="com.diwaves.news.mvp.ui.activity.ArticleDetailActivity"
+            android:name=".mvp.ui.activity.ArticleDetailActivity"
             android:configChanges="keyboardHidden"
             android:windowSoftInputMode="adjustPan|stateHidden" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.WalletRecordActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.AddRmbActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.ReleaseActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.PushTieActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.ReportActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.FriendDetailActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.AddFriendActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.MyFriendActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.EditPhoneActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.EditMyInformationActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.SettingActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.ResetPassWordActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.RegisterActivity" />
-        <activity android:name="com.diwaves.news.mvp.ui.activity.LoginActivity" />
+        <activity android:name=".mvp.ui.activity.WalletRecordActivity" />
+        <activity android:name=".mvp.ui.activity.AddRmbActivity" />
+        <activity android:name=".mvp.ui.activity.ReleaseActivity" />
+        <activity android:name=".mvp.ui.activity.PushTieActivity" />
+        <activity android:name=".mvp.ui.activity.ReportActivity" />
+        <activity android:name=".mvp.ui.activity.FriendDetailActivity" />
+        <activity android:name=".mvp.ui.activity.AddFriendActivity" />
+        <activity android:name=".mvp.ui.activity.MyFriendActivity" />
+        <activity android:name=".mvp.ui.activity.EditPhoneActivity" />
+        <activity android:name=".mvp.ui.activity.EditMyInformationActivity" />
+        <activity android:name=".mvp.ui.activity.SettingActivity" />
+        <activity android:name=".mvp.ui.activity.ResetPassWordActivity" />
+        <activity android:name=".mvp.ui.activity.RegisterActivity" />
+        <activity android:name=".mvp.ui.activity.LoginActivity" />
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/QMUI.NoActionBar" />
         <activity
-            android:name="com.diwaves.news.mvp.ui.activity.MainActivity"
+            android:name=".mvp.ui.activity.MainActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,7 +70,7 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:taskAffinity="com.diwaves.news"
-            android:theme="@style/QMUI.NoActionBar"></activity>
+            android:theme="@style/QMUI.NoActionBar" />
 
         <meta-data
             android:name="com.diwaves.news.network.GlobalConfiguration"
