--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/QMUI.NoActionBar">
+        <activity android:name=".mvp.ui.activity.NewFriendActivity" />
         <activity android:name=".mvp.ui.activity.BuyVipActivity" />
         <activity android:name=".mvp.ui.activity.WebArticleActivity" />
         <activity android:name=".mvp.ui.activity.PingBiActivityActivity" />
