--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/QMUI.NoActionBar">
+        <activity android:name=".mvp.ui.activity.SystemActivity" />
+        <activity android:name=".mvp.ui.activity.TouSuActivityActivity" />
+        <activity android:name=".mvp.ui.activity.ResealesPhotoActivityActivity" />
         <activity android:name=".mvp.ui.activity.EexamineActivity" />
         <activity android:name=".ExamineActivity" />
         <activity android:name=".mvp.ui.activity.NewFriendActivity" />
