--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,6 @@
         <activity android:name=".mvp.ui.activity.TouSuActivityActivity" />
         <activity android:name=".mvp.ui.activity.ResealesPhotoActivityActivity" />
         <activity android:name=".mvp.ui.activity.EexamineActivity" />
-        <activity android:name=".ExamineActivity" />
         <activity android:name=".mvp.ui.activity.NewFriendActivity" />
         <activity android:name=".mvp.ui.activity.BuyVipActivity" />
         <activity android:name=".mvp.ui.activity.WebArticleActivity" />
@@ -55,7 +54,9 @@
             android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity android:name=".mvp.ui.activity.WalletRecordActivity" />
         <activity android:name=".mvp.ui.activity.AddRmbActivity" />
-        <activity android:name=".mvp.ui.activity.ReleaseActivity" />
+        <activity android:name=".mvp.ui.activity.ReleaseActivity"
+            android:windowSoftInputMode="adjustResize|stateHidden"
+            />
         <activity android:name=".mvp.ui.activity.PushTieActivity" />
         <activity android:name=".mvp.ui.activity.ReportActivity" />
         <activity android:name=".mvp.ui.activity.FriendDetailActivity" />
