--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,5 @@ dependencies {
 
     api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     implementation 'com.github.yuzhiqiang1993:zxing:2.2.5'
-
+    implementation 'top.zibin:Luban:1.1.8'
 }
