--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,6 @@ dependencies {
     api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     implementation 'com.github.yuzhiqiang1993:zxing:2.2.5'
     implementation 'top.zibin:Luban:1.1.8'
+    //三方读取摄像头拍照
+    implementation 'com.github.jkwiecien:EasyImage:3.0.4'
 }
